add: device for user authentication

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+  <p class="notice"><%= notice %></p> 
+  <p class="alert"><%= alert %></p> 
     <%= yield %>
+    <%= # the yield block will be replaced by the content from your view files %>
   </body>
 </html>
