--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,8 @@
 # This is the view file that the index action of the Home controller is going to render
 %>
 <h1>Hello DigitalOcean!</h1>
+<div class="actions">
+<% if user_signed_in? %>
+<%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
+<% end %>
+</div>
